[tool.poetry]
name = "dct"
version = "0.1.0"
description = ""
authors = ["Abhinav Ramesh Kashyap <abhinavkashyap92@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.8.0"
pytorch-lightning = "^1.4.4"
datasets = "^1.11.0"
tqdm = "^4.62.2"
wasabi = "^0.8.2"
loguru = "^0.5.3"
wandb = "^0.12.1"
transformers = "^4.9.2"
nltk = "^3.6.2"
sentencepiece = "^0.1.96"
fasttext = "^0.9.2"
sklearn = "^0.0"
spacy = "2.1.0"
torchtext = "^0.10.0"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
